--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,16 @@ project(DD_ILP)
 
 cmake_minimum_required(VERSION 2.8.12)
 
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
+
 # C++14
 add_compile_options(-std=c++14)
 
 # compiler options
 add_definitions(-march=native)
+
+add_library(DD_ILP INTERFACE)
+target_include_directories(DD_ILP INTERFACE . include )
 
 include(ExternalProject)
 
@@ -21,8 +26,13 @@ ExternalProject_ADD(lingeling_project
 
 add_library(lingeling STATIC IMPORTED GLOBAL)
 set_target_properties(lingeling PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/liblgl.a")
-set_target_properties(lingeling PROPERTIES INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/")
+target_include_directories(DD_ILP INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/")
 
-add_library(DD_ILP INTERFACE)
-target_include_directories(DD_ILP INTERFACE . include )
+option(WITH_GUROBI OFF)
+if(WITH_GUROBI)
+  find_package(GUROBI REQUIRED)
+  target_include_directories(DD_ILP INTERFACE "${GUROBI_INCLUDE_DIR}")
+  add_definitions(-DDD_ILP_WITH_GUROBI)
+endif()
+
 add_subdirectory(test) 
