--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,13 +16,17 @@ target_include_directories(DD_ILP INTERFACE . include )
 include(ExternalProject)
 
 list(APPEND DEPENDENCIES lingeling_project)
+file(
+  COPY        "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/"
+  DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/external/lingeling/"
+)
 ExternalProject_ADD(lingeling_project
-  SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling"
-  CONFIGURE_COMMAND "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/configure"
-  BUILD_COMMAND "make"
+  SOURCE_DIR "${CMAKE_CURRENT_BINARY_DIR}/external/lingeling"
   BUILD_IN_SOURCE 1
+  CONFIGURE_COMMAND "./configure"
+  BUILD_COMMAND "make"
   INSTALL_COMMAND ""
-  )
+)
 
 add_library(lingeling STATIC IMPORTED GLOBAL)
 set_target_properties(lingeling PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/liblgl.a")
