--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,27 +10,12 @@ add_compile_options(-std=c++14)
 # compiler options
 add_definitions(-march=native)
 
+add_subdirectory(external/lingeling)
+
 add_library(DD_ILP INTERFACE)
 target_include_directories(DD_ILP INTERFACE . include )
+target_link_libraries(DD_ILP INTERFACE lingeling)
 
-include(ExternalProject)
-
-list(APPEND DEPENDENCIES lingeling_project)
-file(
-  COPY        "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/"
-  DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/external/lingeling/"
-)
-ExternalProject_ADD(lingeling_project
-  SOURCE_DIR "${CMAKE_CURRENT_BINARY_DIR}/external/lingeling"
-  BUILD_IN_SOURCE 1
-  CONFIGURE_COMMAND "./configure"
-  BUILD_COMMAND "make"
-  INSTALL_COMMAND ""
-)
-
-add_library(lingeling STATIC IMPORTED GLOBAL)
-set_target_properties(lingeling PROPERTIES IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/liblgl.a")
-target_include_directories(DD_ILP INTERFACE "${CMAKE_CURRENT_SOURCE_DIR}/external/lingeling/")
 
 option(WITH_GUROBI OFF)
 if(WITH_GUROBI)
