--- a/.travis.yml
+++ b/.travis.yml
@@ -1,29 +1,32 @@
-# Use new trusty images, should yield newer compilers and packages
-sudo: required
 dist: trusty
-language: generic
-
-matrix:
-  include:
-    - os: linux
-      env: COMPILER_NAME=clang CXX=clang++-3.8 CC=clang-3.8
-      addons:
-        apt:
-          packages:
-            - g++-5
-            - clang-3.8
-          sources: 
-            - llvm-toolchain-precise-3.8
+sudo: required
+language:
+    - cpp
+compiler:
+    - gcc
+addons:
+    apt:
+        sources:
             - ubuntu-toolchain-r-test
-
-before_install:
-  - sudo apt-get update -qq
+        packages:
+            - gcc-7
+            - g++-7
+            - cmake
 script:
-  - cmake .
-  - make
-  - ./test/binary_triangle_gm_sat
-  - ./test/binary_triangle_gm_problem_export
+    # Link gcc-7 and g++-7 to their standard commands
+    - sudo ln -s /usr/bin/gcc-7 /usr/local/bin/gcc
+    - sudo ln -s /usr/bin/g++-7 /usr/local/bin/g++
+    # Export CC and CXX to tell cmake which compiler to use
+    - export CC=/usr/bin/gcc-7
+    - export CXX=/usr/bin/g++-7
+    # Check versions of gcc, g++ and cmake
+    - gcc -v && g++ -v && cmake --version
+    # Run your build commands next
+    - git submodule update --init
+    - cmake .
+    - make
+    - make test
 
 notifications:
-   email: false
+email: false
 
