--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ cmake_minimum_required(VERSION 2.8.12)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules)
 
 # C++14
-add_compile_options(-std=c++14)
+set(CMAKE_CXX_FLAGS "-std=c++14")
 
 # compiler options
 add_definitions(-march=native)
