--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/lingeling"]
 	path = external/lingeling
-	url = ssh://git@github.com/pawelswoboda/lingeling.git
+	url = ../../pawelswoboda/lingeling.git
